--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "draftail": "^1.2.1",
     "draftjs-to-html": "^0.9.1",
     "fast-array-diff": "^0.2.0",
+    "fsevents": "^1.2.9",
     "fuzzaldrin": "^2.1.0",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
